fixed main padding & align-items of section 3

--- a/src/style.scss
+++ b/src/style.scss
@@ -69,7 +69,7 @@ $purple: #55328B;
 .btn-left,
 .btn-right {
   position: absolute;
-  top: 50%;
+  top: 45%;
   transform: translateY(-50%);
   z-index: 3;
   padding: 14px 6px;
